# filewatch

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: cross-platform-lock.yml
filewatch/: cli.py  logger.py  utils.py
scripts/: release.py
